--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "i": "^0.3.6",
+    "leaflet": "^1.3.4",
     "npm": "^6.4.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-leaflet": "^2.1.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
   },
